<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestActivity">

    <TextView
        android:id="@+id/kaitou_text2"
        android:layout_width="@dimen/title_width"
        android:layout_height="@dimen/title_height"
        android:text="@string/kaitou_text_value"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/title_size"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <Button
        android:id="@+id/seikai_button"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="152dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/seikai_button_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/syutudai_button"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="188dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/syutudai_button_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/change_button2"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/change_button2_value"
        android:textSize="@dimen/change_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/kaitou_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/syutudai" />

    <Button
        android:id="@+id/matigai_button"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/matigai_button_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/hakusyu_button"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/holo_orange_light"
        android:text="@string/hakusyu_button_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />
</androidx.constraintlayout.widget.ConstraintLayout>