<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/kaitou_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/kaitou_height"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/kaitou" />

    <TextView
        android:id="@+id/kaitou_text"
        android:layout_width="@dimen/title_width"
        android:layout_height="@dimen/title_height"
        android:text="@string/kaitou_text_value"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/title_size"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/kaitou_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/kaitou_button_value"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="@+id/kaitou_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kaitou_image"
        app:layout_constraintVertical_bias="0.805" />

    <Button
        android:id="@+id/change_button1"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/change_button1_value"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/change_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kaitou_image"
        app:layout_constraintVertical_bias="0.551" />
</androidx.constraintlayout.widget.ConstraintLayout>